# scpp-gpr

./: .gitignore  CMakeLists.txt
include/: Scancontext.h  npy.h
src/: testGPR.cpp
